# recipe-service

./: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  isort.cfg  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1071cd649039_initial_migration.py  39c4d5161253_add_images_table.py  7f13b5e12d83_initial.py  c89a1181206a_remove_image_in_rating.py  d636d746e8b4_initial_migration.py  d6b9bb8fdf51_initial.py  d6f7b9023544_add_user_table.py  ef915cc10859_initial.py
api/api_v1/: api.py
api/api_v1/endpoints/auth/: login.py  registration.py
api/api_v1/endpoints/images/: image.py
api/api_v1/endpoints/ratings/: rating.py
api/api_v1/endpoints/recipes/: recipe.py
api/api_v1/endpoints/users/: user.py
core/: config.py  security.py
core/logging/: __init__.py
models/: images.py  ratings.py  recipes.py  users.py
schemas/: images.py  ratings.py  recipes.py  users.py
services/: fake_data.py  recipes.py  users.py
tests/: test_auth.py  test_ratings.py  test_recipes.py  test_users.py
tests/tests_http/: test_auth.http  test_recipe.http  test_user.http
